fix(commandList): remove commandList overflow x

--- a/client/src/features/CommandList/CommandList.scss
+++ b/client/src/features/CommandList/CommandList.scss
@@ -76,6 +76,7 @@
     padding-top: 40px;
     gap: 10px;
     overflow-y: auto;
+    overflow-x: hidden;
 
     #command-list__commands {
       display: flex;
