--- a/client/src/features/CommandList/components/Command/Command.scss
+++ b/client/src/features/CommandList/components/Command/Command.scss
@@ -6,6 +6,7 @@
   font-size: 15px;
   border-radius: var(--small-radius);
   border: 1px solid transparent;
+  overflow: hidden;
 
   &__header {
     display: flex;
